Fix spacing for list in campaign section

--- a/css/style.css
+++ b/css/style.css
@@ -862,7 +862,10 @@ div.center > p {
 	z-index: 10;
 }
 
-
+#campaign ul {
+	margin-left: 1.5em;
+	padding: 1ex;
+}
 
 
 
